--- a/error-report-available-higher-lift-button.html
+++ b/error-report-available-higher-lift-button.html
@@ -134,7 +134,7 @@
 </tbody>
 </table>
 
-                  <p>Your data files have been processed and error reports can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
+                  <p>Your data files have been processed and error report(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
 
 
  <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/data-files/2023-q2/submission-history"
