--- a/error-report-available-low-lift.html
+++ b/error-report-available-low-lift.html
@@ -142,7 +142,7 @@ function showDiv(id) {
 </table>
 
 
-                  <p>Your data file has been processed and error reports can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
+                  <p>Your data file has been processed and error reports, if available, can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
 
 
  <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
@@ -235,7 +235,7 @@ function showDiv(id) {
 </tbody>
 </table>
 
-                  <p>Your data files have been processed and error report(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
+                  <p>Your data file(s) have been processed and error report(s), if available, can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
 
 
  <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
@@ -328,7 +328,7 @@ function showDiv(id) {
 </tbody>
 </table>
 
-                  <p>Your data files have been processed and error report(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
+                  <p>Your data file(s) have been processed and error report(s), if available, can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
 
 
  <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/data-files/2023-q2/submission-history"
