--- a/error-report-available-low-lift.html
+++ b/error-report-available-low-lift.html
@@ -253,7 +253,7 @@ function showDiv(id) {
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                {Fiscal Year, Quarter} Data Processed With Errors
+                {Fiscal Year, Quarter} {Processed With Errors/Processed Without Errors}
             </h1>
         </header>
 
@@ -346,7 +346,7 @@ function showDiv(id) {
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                {Fiscal Year, Quarter} Data Processed With Errors
+                {Fiscal Year, Quarter} {Processed With Errors/Processed Without Errors}
             </h1>
         </header>
 
