--- a/error-report-available-low-lift.html
+++ b/error-report-available-low-lift.html
@@ -241,7 +241,7 @@ function showDiv(id) {
         </footer>
     </div>
 </div>
-
+</div>
 
 <div id="div2" class="mydiv" style="display:none">
      <div role="article" aria-label="TDP - Email Heading 1" lang="en" style="background-color: white; color: #2b2b2b; font-family: 'Merriweather', Cambria, Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 18px; font-weight: 400; line-height: 28px; margin: 0 auto; max-width: 720px; padding: 40px 20px 40px 20px;">
