--- a/error-report-available-low-lift.html
+++ b/error-report-available-low-lift.html
@@ -107,7 +107,7 @@ function showDiv(id) {
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                {File Type} {Processed With Errors/Processed Without Errors}
+                {File Type} {Section Name} {Processed With Errors/Processed Without Errors}
             </h1>
         </header>
 
@@ -178,7 +178,7 @@ function showDiv(id) {
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                SSP Processed With Errors
+                SSP Data Processed With Errors
             </h1>
         </header>
 
