New Email Templates
Deadline approaching and past due with partial and no submission. Updates to the index.html with links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
   <li><a href="inactive-account-1day.html" target="_blank">#1844 - Inactive Account 1 day</a></li>
   <li><a href="deactivated-account.html" target="_blank">#1840 - Account is deactivated</a></li>
   <li><a href="access-request-rollup.html" target="_blank">#1336 - Access Request Rollup</a></li>
+</ul>
   <h2>Data Submission Email Variations</h2>
+  <ul>
+    <li><a href="deadline-approaching-no-submission-5days.html" target="_blank">#1345 Deadline Approaching 5 Days: No Submission </a></li>
+    <li><a href="deadline-approaching-part-submission-5days.html" target="_blank">#1345 Deadline Approaching 5 Days: Partial Submission </a></li>
+    <li><a href="deadline-passed-no-submission.html" target="_blank">#1345 Deadline Passed: No Submission </a></li>
+    <li><a href="deadline-passed-part-submission.html" target="_blank">#1345 Deadline Passed: Partial Submission </a></li>
+    </ul>
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
-  <li><a href="data-has-been-submitted.html" target="_blank">Notify STT Analyst when data for my program has been submitted (currently implemented)</a></li>
+  <ul>
+    <li><a href="data-has-been-submitted.html" target="_blank">Notify STT Analyst when data for my program has been submitted (currently implemented)</a></li>
   <li><a href="error-report-available-low-lift.html" target="_blank">Notify STT Analyst when data for my program has been processed and an error report is available (low lift improvement)</a></li>
   <ul>
     <li>Adds CTA to sign into TDP and where to seek more guidance in the knowledge center</li>
