--- a/deadline-approaching-no-submission-5days.html
+++ b/deadline-approaching-no-submission-5days.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                     <p>Hello [First Name],</p>
                     <p>This is a friendly reminder that your data files are due in 5 days. 
-                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>* 
+                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a> 
                         to upload and submit data files for <b>Fiscal Year {YYYY} - {Quarter (Month-Month}</b> by <b>{Submission Deadline}.</b></p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
