--- a/deadline-approaching-part-submission-5days.html
+++ b/deadline-approaching-part-submission-5days.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                     <p>Hello [First Name],</p>
                     <p>This is a friendly reminder that <b>your data submission is incomplete</b> and due in 5 days. 
-                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>* 
+                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>
                         to upload and submit the remaining data files for <b>Fiscal Year {YYYY} - {Quarter (Month-Month}</b> by <b>{Submission Deadline}.</b></p>
                     <p>Missing data files:</p>
                         <ul>    
