--- a/deadline-passed-part-submission.html
+++ b/deadline-passed-part-submission.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                     <p>Hello [First Name],</p>
                     <p>Our records indicate that <b>your data submission files are incomplete and past due.</b>
-                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>* 
+                    <p>Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>
                         to upload and submit the remaining data files for <b>Fiscal Year {YYYY} - {Quarter (Month-Month} as soon as possible.</b></p>
                     <p>Missing data files:</p>
                         <ul>    
