--- a/deadline-passed-no-submission.html
+++ b/deadline-passed-no-submission.html
@@ -98,7 +98,7 @@
                     
                     <p>Hello [First Name],</p>
                     <p>Our records indicate that we have  <b>not received your data files and are now past due.</b> 
-                        Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>* 
+                        Please sign in to the <a href="https://tanfdata.acf.hhs.gov/" target="_blank">TANF Data Portal</a>
                         to upload and submit data files for <b>Fiscal Year {YYYY} - {Quarter (Month-Month} as soon as possible.</b></p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
