--- a/admin-stuck-data-files.html
+++ b/admin-stuck-data-files.html
@@ -101,56 +101,13 @@
                 <p style="color: #000000;">
                   <p>Hello <b>{Name}</b>,</p>
 
-                  <p>Our system has detected stuck data for the following data file(s) for <b>{STT}</b> for Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>:</p>
+                  <p>The system has detected stuck data submitted by <b>{STT}</b> in <b>{Program Type}</b> for Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b> that was submitted on <b>{Submission Date}</b>.</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
                   <thead style="border-style: solid; border-color: #000000; border-width: 1px; background-color: #e6e6e6;">
-  <tr>
-    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Section</th>
-    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Program</th>
-    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Submitted</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Program}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Submission Date/Time}</td>
-
-  </tr>
-   <tr>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Program}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Submission Date/Time}</td>
-
-  </tr>
-   <tr>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Program}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Submission Date/Time}</td>
-
-  </tr>
-   <tr>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Program}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Submission Date/Time}</td>
-
-  </tr>
 
 </tbody>
 </table>
 
-                  <p>Data files can be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History</a></p>
-
-
- <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
-                  style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">Sign in to TDP</a></p>
-
-
-                  <p>Please contact TDP Admin team at <a href="mailto:TANFData@acf.hhs.gov" target="_blank">TANFData@acf.hhs.gov</a> if you need further assistance.</p>
-
-                  <p>Thank you,</p>
-                  TDP Team
-                </p>
 
                 <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                 <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
