Edits to section name and CTA version
Add {Section Name} variable to subject line and body
Create a version with a "View file in Django Admin Console" button below body text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <li><a href="deadline-passed-no-submission.html" target="_blank">#1345 Deadline Passed: No Submission </a></li>
     <li><a href="deadline-passed-part-submission.html" target="_blank">#1345 Deadline Passed: Partial Submission </a></li>
     <li><a href="admin-stuck-data-files.html" target="_blank">#2985: Admin Notifiation for Stuck Data</a>
+    <li><a href="admin-stuck-data-files-button.html" target="_blank">#2985: Admin Notifiation for Stuck Data with CTA</a>
+
     </ul>
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
   <ul>
