--- a/admin-stuck-data-files-button.html
+++ b/admin-stuck-data-files-button.html
@@ -104,6 +104,12 @@
                   <p>The system has detected stuck <b>{Section#}</b> data submitted by <b>{STT}</b> in <b>{Program Type}</b> for Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b> that was submitted on <b>{Submission Date}</b>.</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
                   <thead style="border-style: solid; border-color: #000000; border-width: 1px; background-color: #e6e6e6;">
+
+                <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
+                <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
+                <!-- <a href="" style="color: #336a90; text-decoration: underline;">Reset your password now</a> -->
+                <p><a class="button" href="https://tdp-frontend-a11y.app.cloud.gov/"
+                style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">View file in Django Admin Console</a></p>
 </tbody>
 </table>
 
