Updated subject line to stuck templates

--- a/admin-stuck-data-files-button.html
+++ b/admin-stuck-data-files-button.html
@@ -87,7 +87,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Active data for {Fiscal Year, Quarter} Stuck in pending
+                {Section} file for {Fiscal Year, Quarter} stuck in {file status} state
             </h1>
         </header>
 
@@ -223,7 +223,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Active data for FY 2024 Quarter 1 Stuck in pending
+                Section 2 file for FY 2024, Quarter 1 stuck in pending state
             </h1>
         </header>
 
