--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 </head>
 <body>
 <h1>TDP Email Templates</h1>
+<h2>Regional Staff Templates:</h2>
+<ul>
+  <li><a href="regional-request-for-access.html" target="_blank">#3249: Request for access to TDP has been submitted</a></li>
+    <li><a href="regional-request-approved.html" target="_blank">#3249: Request for access to TDP has been approved</a></li>
+</ul>
+<h2>Sys Admin Templates:</h2>
+<ul>
+  <li><a href="admin-stuck-data-files.html" target="_blank">#2985: Admin Notifiation for Stuck Data</a>
+    <li><a href="admin-stuck-data-files-button.html" target="_blank">#2985: Admin Notifiation for Stuck Data with CTA</a>
+    </li></li></ul>
+<h2>STT Templates:</h2>
 <ul>
   <li><a href="request-for-access.html" target="_blank">#1814 – Request for access to TDP has been submitted</a></li>
   <li><a href="request-approved.html" target="_blank">#1839 - Request for access to TDP has been approved</a></li>
@@ -20,8 +31,7 @@
     <li><a href="deadline-approaching-no-submission-5days.html" target="_blank">#1345 Deadline Approaching 5 Days: No Submission </a></li>
     <li><a href="deadline-passed-no-submission.html" target="_blank">#1345 Deadline Passed: No Submission </a></li>
     <li><a href="deadline-passed-part-submission.html" target="_blank">#1345 Deadline Passed: Partial Submission </a></li>
-    <li><a href="admin-stuck-data-files.html" target="_blank">#2985: Admin Notifiation for Stuck Data</a>
-    <li><a href="admin-stuck-data-files-button.html" target="_blank">#2985: Admin Notifiation for Stuck Data with CTA</a>
+  
 
     </ul>
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
