--- a/regional-request-approved.html
+++ b/regional-request-approved.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Congratulations! Your request for access to the TANF Data Portal (TDP) is <b>approved</b> and access as <b>Regional Staff</b> for <b>[Region #]</b> has been granted.</p>
+                  <p>Congratulations! Your request for access to the TANF Data Portal (TDP) is <b>approved</b> and access as <b>Regional Staff</b> for Region(s) <b>[Region #]</b> has been granted.</p>
 
                   <!-- This link uses descriptive text to inform the user what will happen with the link is tapped. -->
                   <!-- It also uses inline styles since some email clients won't render embedded styles from the head. -->
