--- a/regional-request-for-access.html
+++ b/regional-request-for-access.html
@@ -97,7 +97,7 @@
                 <p style="color: #000000;">
                   <p>Dear [FirstName],</p>
 
-                  <p>Your request for <b>[Region #]</b> access to the TANF Data Portal (TDP) has been submitted for review.</p>
+                  <p>Your request for Region(s) <b>[Region #]</b> access to the TANF Data Portal (TDP) has been submitted for review.</p>
 
                   <p>You can <a href="https://tanfdata.acf.hhs.gov/" target="_blank">view the status</a> of your request by logging into TDP.</p>
 
