--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
     <li><a href="deadline-approaching-no-submission-5days.html" target="_blank">#1345 Deadline Approaching 5 Days: No Submission </a></li>
     <li><a href="deadline-passed-no-submission.html" target="_blank">#1345 Deadline Passed: No Submission </a></li>
     <li><a href="deadline-passed-part-submission.html" target="_blank">#1345 Deadline Passed: Partial Submission </a></li>
-  
-
     </ul>
+
+  <h2>Data Submission Status Email Variations</h2>
+  <ul>
+    <li><a href="https://github.com/reitermb/TDP-HTML-Email-Demo-Environment/blob/main/data-submitted-accepted.html" target="_blank">Accepted With No Errors</a></li>
+  </ul>
+  
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
   <ul>
     <li><a href="data-has-been-submitted.html" target="_blank">Notify STT Analyst when data for my program has been submitted (currently implemented)</a></li>
