--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <h2>Data Submission Status Email Variations</h2>
   <ul>
     <li><a href="data-submitted-accepted.html" target="_blank">Accepted With No Errors</a></li>
+    <li><a href="data-submitted-accepted-with-errors.html" target="_blank">Accepted With Errors</a></li>
+    <li><a href="data-submitted-partially-accepted-rejected.html" target="_blank">Partially Accepted With Errors / Rejected</a></li>
   </ul>
   
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
