--- a/fra-data-submitted-accepted.html
+++ b/fra-data-submitted-accepted.html
@@ -87,7 +87,7 @@
             </a>
             <!-- The h1 is the main heading of the document and should come first. -->
             <h1 style="color: #000000; font-size: 42px; font-weight: 800; line-height: 32px; margin: 48px; text-align: left;">
-                Work Outcomes of TANF Exiters Successfully Submitted Without Errors
+                Work Outcomes of TANF Exiters Successfully Submitted
             </h1>
         </header>
 
@@ -124,7 +124,7 @@
 </tbody>
 </table>
 
-                  <p>The data file can now be accessed via the Submission History table of the FRA Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History.</a></p>
+                  <p>The data file can now be accessed via the Submission History table of the FRA Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/submitting-fra-data.html#submission-history" target="_blank">Read more about using Submission History.</a></p>
 
 <p>
         <a class="button" href="{{ url }}" style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">
