--- a/fra-data-submitted-partially-accepted-with-errors.html
+++ b/fra-data-submitted-partially-accepted-with-errors.html
@@ -101,7 +101,7 @@
                 <p style="color: #000000;">
                   <p>Hello,</p>
 
-                  <p>Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>, have been processed but <b>some cases within your data contain errors</b>. Review the error report for more details, and <b>resubmit your data files</b> once the errors have been corrected.</p>
+                  <p>Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>, <b>was unable to fully process</b>. This means that some of the records in the file were accepted and some of the records were rejected because they contained errors. Review the error report for more details, and <b>resubmit your data files</b> once the errors have been corrected.</p>
 
                   <p>Submitted files:</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
@@ -117,14 +117,14 @@
   <tr>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Work Outcomes of TANF Exiters</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Accepted with Errors</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Partially Accepted with Errors</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{error report}/td>
   </tr>
 
 </tbody>
 </table>
 
-                  <p>Your data file and error report can now be accessed via the Submission History table of the FRA Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History.</a></p>
+                  <p>Your data file and error report can now be accessed via the Submission History table of the FRA Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/fra-error-reports.html" target="_blank">Read more about error reports</a></p>
 
 <p>
         <a class="button" href="{{ url }}" style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">
