--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
     <li><a href="deadline-passed-part-submission.html" target="_blank">#1345 Deadline Passed: Partial Submission </a></li>
     </ul>
 
-  <h2>Data Submission Status Email Variations</h2>
+  <h2>TANF/SSP Data Submission Status Email Variations</h2>
   <ul>
     <li><a href="data-submitted-accepted.html" target="_blank">Accepted With No Errors</a></li>
     <li><a href="data-submitted-accepted-with-errors.html" target="_blank">Accepted With Errors</a></li>
     <li><a href="data-submitted-partially-accepted-rejected.html" target="_blank">Partially Accepted With Errors / Rejected</a></li>
+  </ul>
+
+  <h2>TANF/SSP Program Integrity Audit Data Submission Status Email Variations</h2>
+  <ul>
+    <li><a href="pia_data-accepted.html" target="_blank">Accepted With No Errors</a></li>
+    <li><a href="pia_data-submitted-accepted-with-errors.html" target="_blank">Accepted With Errors</a></li>
+    <li><a href="pia_data-submitted-partially-accepted-rejected.html" target="_blank">Partially Accepted With Errors / Rejected</a></li>
+  </ul>
+  
+  <h2>FRA Data Submission Status Email Variations</h2>
+  <ul>
+    <li><a href="fra-data-submitted-accepted.html" target="_blank">Accepted With No Errors</a></li>
+    <li><a href="fra-data-submitted-partially-accepted-with-errors.html" target="_blank">Accepted With Errors</a></li>
+    <li><a href="fra-data-submitted-rejected.html" target="_blank">Rejected</a></li>
   </ul>
   
   <p>Captures the output of dev:design <a href="https://app.mural.co/t/raft2792/m/raft2792/1670442812740/df177d3bb67bd1a9921614d0261a1abb15214bc5?wid=0-1682096681687">discussions</a> for how to sequence improvements to TDP and Data Submission notification emails. 
@@ -58,3 +72,4 @@
 </ul>
 </body>
 </html>
+
