--- a/pia_data-accepted.html
+++ b/pia_data-accepted.html
@@ -118,25 +118,25 @@
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Quarter 1 (October - December)</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Records Contained}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
   </tr>
   <tr>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Quarter 2 (January - March)</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Records Contained}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
   </tr>
   <tr>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Quarter 3 (April-June)</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Records Contained}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
   </tr>
   <tr>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Quarter 4 (July-September)</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Records Contained}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
   </tr>
 
 </tbody>
