updates to email text
punctuation and processed/reprocessed

--- a/error-report-existing-submission.html
+++ b/error-report-existing-submission.html
@@ -101,7 +101,7 @@
                 <p style="color: #000000;">
                   <p>Hello,</p>
 
-                  <p>An updated error report is now available for your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b>. The data was reparsed, and new or updated errors were detected. .</b> 
+                  <p>An updated error report is now available for your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b>. The data was reprocessed and new or updated errors were detected.</b> 
                     <p>Please review the updated error report(s) for more details and <b>resubmit your data files</b> once the errors have been corrected.</p>
 
                   <p>Updated submission files:</p>
