--- a/existing-submission-resolved.html
+++ b/existing-submission-resolved.html
@@ -101,7 +101,7 @@
                 <p style="color: #000000;">
                   <p>Hello,</p>
 
-                  <p>Good news! Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>, were reparsed and all previously detected errors have been cleared. Your file(s) have been processed and accepted.
+                  <p>Good news! Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b> were reprocessed and all previously detected errors have been cleared. Your file(s) have been accepted.
 
                   <p>Submitted files:</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
