--- a/data-submitted-partially-accepted-rejected.html
+++ b/data-submitted-partially-accepted-rejected.html
@@ -101,7 +101,7 @@
                 <p style="color: #000000;">
                   <p>Hello,</p>
 
-                  <p>Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>, were <b>unable to be processed.</b> Review the error report(s) for more details, and <b>resubmit your data files</b> once the errors have been corrected.</p>
+                  <p>Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month}</b>, were <b>unable to be fully processed.</b> Review the error report(s) for more details, and <b>resubmit your data files</b> once the errors have been corrected.</p>
 
                   <p>Submitted files:</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
