--- a/data-submitted-partially-accepted-rejected.html
+++ b/data-submitted-partially-accepted-rejected.html
@@ -130,7 +130,7 @@
 </tbody>
 </table>
 
-                  <p>Your data file and the error report(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/viewing-error-reports.html" target="_blank">Read more about error reports.</a>
+                  <p>Your data file and the error report(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/submitting-fra-data.html" target="_blank">Read more about using Submission History.</a>
                                           
 <p>
         <a class="button" href="{{ url }}" style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">
