--- a/error-report-existing-submission.html
+++ b/error-report-existing-submission.html
@@ -104,8 +104,9 @@
                   <p>An updated error report is now available for your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b>. The data was reprocessed and new or updated errors were detected.</b> 
                     <p>Please review the updated error report(s) for more details and <b>resubmit your data files</b> once the errors have been corrected.</p>
 
-                  <p>Updated submission files:</p>
+                   <p>Reprocessed Submission Files:</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
+    <caption style="text-align: left;"><b>Section {1 or 2}</b></caption>
                   <thead style="border-style: solid; border-color: #000000; border-width: 1px; background-color: #e6e6e6;">
   <tr>
     <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Section</th>
@@ -121,15 +122,38 @@
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
     <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
-    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Error Report}</td>
+       <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
+          <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
+             <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Error Report}</td>
+  </tr>
+
+</tbody>
+</table>
+<br>
+<table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
+    <caption style="text-align: left;"><b>Section {3 or 4}</b></caption>
+                  <thead style="border-style: solid; border-color: #000000; border-width: 1px; background-color: #e6e6e6;">
+  <tr>
+    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Section</th>
+    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Submitted By</th>
+    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Status</th>
+    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Total Errors</th>
+    <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Error Report</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{File Type}{Section Name}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{User's Name}</td>
+    <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Status}</td>
+       <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Number}</td>
+             <td style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">{Error Report}</td>
   </tr>
 
 </tbody>
 </table>
 
-                  <p>Your data file and the error report can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/viewing-error-reports.html" target="_blank">Read more about error reports.</a></p>
+                  <p>Your data file and the error report can now be accessed via the Submission History tab of the Data Files page. <a href="" target="_blank">Read more about {FRA/TANF} error reports.</a></p>
                                           
 <p>
         <a class="button" href="{{ url }}" style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">
