--- a/existing-submission-resolved.html
+++ b/existing-submission-resolved.html
@@ -101,10 +101,11 @@
                 <p style="color: #000000;">
                   <p>Hello,</p>
 
-                  <p>Good news! Your <b>{File Type}</b> data files submitted by <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b> were reprocessed and all previously detected errors have been cleared. Your file(s) have been accepted.
+                  <p>Good news! Your <b>{File Type}</b> data files submitted for <b>{STTName}</b> on <b>{SubmissionDate}</b> in Fiscal Year <b>{YYYY} - {Quarter (Month-Month)}</b> were reprocessed and all previously detected errors have been cleared. Your file(s) have been <b>accepted without errors</b>.
 
-                  <p>Submitted files:</p>
+                  <p>Updated Submission Files:</p>
 <table style="width: 100%; background-color: #ffffff; border-width: 1px; border-color: #000000; border-style: solid; color: #000000; text-align: left; margin-bottom: 8px;">
+    <caption style="text-align: left;"><b>Section {Number}</b></caption>
                   <thead style="border-style: solid; border-color: #000000; border-width: 1px; background-color: #e6e6e6;">
   <tr>
     <th style="padding: 8px; border-style: solid; border-color: #000000; border-width: 1px;">Section</th>
@@ -122,7 +123,8 @@
 </tbody>
 </table>
 
-                  <p>The data file can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History.</a></p>
+
+                  <p>The data file(s) can now be accessed via the Submission History tab of the Data Files page. <a href="https://tdp-project-updates.app.cloud.gov/knowledge-center/view-submission-history.html" target="_blank">Read more about using Submission History.</a></p>
 
 <p>
         <a class="button" href="{{ url }}" style="background-color:#336a90;border-radius:4px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;font-weight:bold;line-height:60px;text-align:center;text-decoration:none;width: auto; padding-left: 24px; padding-right: 24px;-webkit-text-size-adjust:none;">
